Istio/Istio-Demo/node-grafana.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: grafana-gateway
 namespace: istio-system
spec:
 selector:
   istio: ingressgateway
 servers:
 - port:
     number: 15031
     name: http-grafana
     protocol: HTTP
   hosts:
   - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: grafana-vs
 namespace: istio-system
spec:
 hosts:
 - "*"
 gateways:
 - grafana-gateway
 http:
 - match:
   - port: 15031
   route:
   - destination:
       host: grafana
       port:
         number: 3000
